src/test/resources/Parser/SyntaxErrors/UndeclaredVariable.front
class A:
    a: A = b;